@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?define ProductBuild     = "1.1" ?>
-<?define ProductRevision  = "0" ?>
+<?define ProductRevision  = "1" ?>
 <?define ProductName      = "Beryllium" ?>
 
 <?define Manufacturer    = "dc.baikal.ru" ?>
